src/components/block-inserter/editor.scss
.maxi-block-inserter {
	&__text {
		text-align: center;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		font-family: 'Roboto', sans-serif !important;
		font-size: 16px !important;
		line-height: 1.4 !important;
	}
	.block-editor-inserter {
		display: flex;
		width: 100%;
		min-height: 100px;
	}
	&__text {
		&:empty {
			display: none;
		}
	}
	&__button {
		display: block;
		position: relative;
		width: 16px;
		height: 16px;
		margin: auto;
		padding: 0 !important;
		background: #ff4a17;
		box-shadow: none;
		border-radius: 0;
		transition: all 0s ease;

		@at-root .rtl #{&} {
			right: 50%;
			transform: translate(50%, -50%);
		}

		&:hover,
		&:focus {
			box-shadow: none;
			outline: none;
			background: #151617;
		}

		svg {
			display: block;
			width: 16px;
			height: 16px;
			fill: #fff;
		}
	}

	&__dropdown {
		&-selector {
			background: orange;
			border: black 2px solid;
		}

		&-content {
			z-index: 99999;
			.block-editor-inserter {
				.components-button {
					position: relative;
					display: block;
					width: 100%;
					height: 30px !important;
					border: none;
					box-shadow: none !important;
					text-align: left;
					text-transform: capitalize;
					transition: 0.3s;
					&::after,
					&::before {
						content: '';
						position: absolute;
						bottom: 0;
						left: 0;
						right: 0;
						display: block;
						height: 1px;
						background-color: var(--maxi-grey-1-color);
					}
					&::after {
						width: 0;
						margin: auto;
						background-color: var(--maxi-secondary-color);
						transition: 0.3s;
					}
					&:hover {
						background-color: #eaf2f6;
						&::after {
							width: 100%;
						}
					}
				}
				&:last-child {
					.components-button {
						&::before {
							display: none;
						}
					}
				}
			}
			.block-editor-inserter {
				width: 100%;
			}
			.maxi-block-inserter__content {
				width: 180px;
			}
		}
	}
}

.maxi-wrapper-block-inserter {
	animation: none;

	.components-popover__content {
		height: 20px;
		transform: translate(-50%, -50%) !important;
		overflow: hidden;
		background: transparent;
		border: none;
		border-radius: 0;
		box-shadow: none;
	}
}

